--- a/app/views/articles/new.erb
+++ b/app/views/articles/new.erb
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <%end%>
-  <%=form_for [@category, @article] do |f| %>
+  <%=form_for [@category, @article, @user] do |f| %>
 
 
   <p><%=f.label :title %><br>
